# observability

./: .gitignore  README.md  make_requests.py  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
fastapi/: Dockerfile.auto_otel  Dockerfile.prog_otel  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml
fastapi/auto/: logger.py  main.py
fastapi/prog/: logger.py  main.py
scripts/: docker-compose.yaml  log_example.py  metric_example.py  otel-collector-config.yaml  trace_example.py
