[tool.poetry]
name = "observability"
version = "0.1.0"
description = "my studies on observability"
authors = ["José Nunes <josenunesra@gmail.com>"]
readme = "README.md"
repository = "https://github.com/josejnra/observability"
homepage = "https://github.com/josejnra/observability"
documentation = "https://github.com/josejnra/observability"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
flask = "^3.0.0"
uvicorn = "^0.24.0.post1"
opentelemetry-distro = "^0.42b0"
opentelemetry-exporter-otlp = "^1.21.0"
sqlalchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.12.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
mypy = "^1.7.0"
faker = "^20.0.0"

[tool.poetry.extras]
dev_types = ["types-paramiko", "types-python-dateutil", "types-pytz", "types-PyYAML", "types-requests", "types-six"]

[tool.black]
line-length = 120
target-version = ['py310']  # all versions that your code supports
extend-exclude = "templates"  # adds additional files and directories on top of the excluded one

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true  # Includes a trailing comma on multi line imports that include parentheses
line_length = 88  # max length of an import line
extend_skip = []  # add additional files that isort should skip over
skip_glob = ["templates/*"]  # nested files that isort should skip over.

[tool.mypy]
exclude = [  # regular expressions
    "templates"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
